# MPF_GRR_SLT

./: .gitignore  README.md  requirements.txt
mono_control/: CMakeLists.txt  package.xml
mono_control/launch/: mono_controlling.launch
mono_control/scripts/: control_node.py  pid.py
mono_following/: CMakeLists.txt  README.md  package.xml
mono_following/action/: updateExtractor.action
mono_following/include/mono_following/: classifier.hpp  descriminator.hpp  initial_state.hpp  initial_training_state.hpp  reid_state.hpp  state.hpp  tracking_state.hpp  tracklet.hpp
mono_following/launch/: mono_extract.launch  mono_following.launch  mono_saveImages.launch
mono_following/msg/: Box.msg  Descriptor.msg  Samples.msg  Target.msg
mono_following/scripts/mono_following/: descriminator.py  mono_following_node.py  tracklet.py
mono_following/scripts/mono_following/reid/: RRClassifier.py  classify.py  control.py  extract.py  reid.py  tuner.py
mono_following/scripts/mono_following/reid/descriptor/deep/: targetClassifier.py
mono_following/scripts/mono_following/reid/lib/: __init__.py  evaluators.py  trainers.py
mono_following/scripts/mono_following/reid/lib/dataset/: dataset.py
mono_following/scripts/mono_following/reid/yolox_descriptor/deep/: feature_extractor.py
mono_following/scripts/mono_following/states/: initial_state.py  initial_training_state.py  reid_state.py  state.py  tracking_state.py
mono_following/srv/: classifyTarget.srv  extractDescriptors.srv  updateDescriptors.srv
mono_tracking/: CMakeLists.txt  README.md  package.xml
mono_tracking/debug/personInit/: CMakeLists.txt  main.cpp  run.sh
mono_tracking/debug/personInit/.history/: CMakeLists_20211002204621.txt  CMakeLists_20211002220158.txt  CMakeLists_20211002220205.txt  CMakeLists_20211002220214.txt  CMakeLists_20211002220251.txt  CMakeLists_20211002220359.txt  CMakeLists_20211002220421.txt  CMakeLists_20211002220429.txt  CMakeLists_20211002220431.txt  main_20211002215221.cpp  main_20211002215537.cpp  main_20211002215546.cpp  main_20211002215649.cpp  main_20211002220521.cpp  main_20211002220829.cpp  main_20211002221338.cpp  main_20211002221347.cpp  main_20211002221407.cpp  main_20211002221630.cpp  main_20211002221936.cpp  main_20211002222104.cpp  main_20211002222122.cpp  main_20211002222136.cpp  main_20211002222509.cpp  main_20211002222532.cpp  main_20211002222606.cpp  main_20211002222712.cpp  main_20211002222921.cpp  main_20211002222934.cpp  main_20211002223031.cpp  main_20211002223047.cpp  main_20211002223109.cpp  main_20211002223127.cpp  main_20211002223211.cpp  main_20211002223300.cpp  main_20211002223851.cpp  main_20211002224056.cpp  main_20211002224117.cpp  main_20211002224130.cpp
mono_tracking/include/kkl/alg/: data_association.hpp  nearest_neighbor_association.hpp  unscented_kalman_filter.hpp
mono_tracking/include/kkl/math/: gaussian.hpp
mono_tracking/include/mono_tracking/: association_distance.hpp  motion_filter.hpp  observation.hpp  people_tracker.hpp  person_tracker.hpp  track_system.hpp
mono_tracking/launch/: all_mono_tracking.launch  mono_detect.launch  mono_monitor.launch  mono_tracking.launch  robot_frames.launch  save_image_distance.launch
mono_tracking/msg/: Box.msg  BoxArray.msg  Track.msg  TrackArray.msg
mono_tracking/rviz/: mono_tracking.rviz
mono_tracking/scripts/: detect.py  init.py
mono_tracking/scripts/debug/: get_distance_error_plot.py  get_distance_with_kf.py  monitor.py
mono_tracking/scripts/debug/logs/: events.out.tfevents.1644918225.jing
mono_tracking/scripts/debug/logs/Target cov/(0,0)/: events.out.tfevents.1644918250.jing
mono_tracking/scripts/debug/logs/Target cov/(1,1)/: events.out.tfevents.1644918250.jing
mono_tracking/scripts/debug/logs/Target cov/(2,2)/: events.out.tfevents.1644918250.jing
mono_tracking/scripts/debug/logs/Target cov/(3,3)/: events.out.tfevents.1644918250.jing
mono_tracking/scripts/debug/logs/Target observation/obs1/: events.out.tfevents.1644918250.jing
mono_tracking/scripts/debug/logs/Target observation/obs2/: events.out.tfevents.1644918250.jing
mono_tracking/scripts/debug/logs/Target position/X/: events.out.tfevents.1644918250.jing
mono_tracking/scripts/debug/logs/Target position/Y/: events.out.tfevents.1644918250.jing
mono_tracking/scripts/debug/logs/Target trace/trace/: events.out.tfevents.1644918250.jing
mono_tracking/scripts/debug/logs/Target velocity/X/: events.out.tfevents.1644918250.jing
mono_tracking/scripts/debug/logs/Target velocity/Y/: events.out.tfevents.1644918250.jing
mono_tracking/scripts/yolox/YOLOX/: detector.py
mono_tracking/src/: mono_tracking_node.cpp  people_tracker.cpp  person_tracker.cpp  track_system.cpp
mono_tracking/src/debug/: evaluate_distance_by_mc.cpp  evaluate_distance_estimation_node.cpp  save_image_distance.cpp
